syntax = "proto3";
package Proto;

option go_package = "./Proto";

service ProtoService{
    rpc JoinService(joinRequest) returns (response);
    rpc GetValue (getRequest) returns (value);
    rpc SetValue (setRequest) returns (response);
} 


message joinRequest{
    int64 userId = 1; 
    int64 timestamp = 2;
}

message response{
    string msg = 1;
    int64 timestamp = 2;
}

message value{
    int64 currentValue = 1;
    int64 userId = 2;
    int64 timestamp = 3;
}

message setRequest{
    int64 userId = 1;
    int64 requestedValue = 2;
    int64 timestamp = 3;
}

message getRequest{
    int64 timestamp = 1;
}

